// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render with default props 1`] = `
<Heading
  className="pPtPZ"
  color="#007acc"
  margin="medium"
  tag="h1"
  textAlign="center"
  truncate={false}
  upcase={false}
>
  Test
</Heading>
`;

exports[`<Heading /> should render with h2 props 1`] = `
<Heading
  className="loWbZD"
  color="#333"
  margin="none"
  tag="h2"
  textAlign="left"
  truncate={true}
  upcase={false}
>
  Test
</Heading>
`;

exports[`<Heading /> should render with h3 props 1`] = `
<Heading
  className="kjpymt"
  color="#333"
  margin="none"
  tag="h3"
  textAlign="left"
  truncate={true}
  upcase={false}
>
  Test
</Heading>
`;

exports[`<Heading /> should render with h4 props 1`] = `
<Heading
  className="fAvSlm"
  color="#333"
  margin="none"
  tag="h4"
  textAlign="left"
  truncate={true}
  upcase={false}
>
  Test
</Heading>
`;

exports[`<Heading /> should render with h5 props 1`] = `
<Heading
  className="ZnkAX"
  color="#333"
  margin="none"
  tag="h5"
  textAlign="left"
  truncate={true}
  upcase={false}
>
  Test
</Heading>
`;
